--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ h2 {
 .icons{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .header .nav1 .icons div,
 .header .nav1 .icons a{
@@ -1208,6 +1208,28 @@ h2 {
 .cartProdDescDiv{
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    height: 150px;
+}
+
+.cartProdName{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.cartProdPrice{
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.prodQuantity{
+    text-align: center;
+    font-weight: bold;
+}
+
+#totalPriceSpan{
+    font-weight: bold;
+    font-size: 17px;
 }
 
 /* The Close Button */
@@ -1235,16 +1257,16 @@ h2 {
 #counter{
     position: relative;
     background-color: #000;
-    width: 1.3rem;
-    height: 1.3rem;
-    font-size: .8rem;
+    width: 1.6rem;
+    height: 1.6rem;
+    font-size: 1rem;
     border-radius: 50%;
     font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
-    top: .2rem;
-    right: .3rem;
+    top: -33px;
+    right: -22px;
     color: white;
 }
 
@@ -1257,6 +1279,161 @@ h2 {
 .cartProdImg{
     width: 120px;
     height: 200px;
+}
+
+/* Display Product */
+.box-container{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 100px;
+    background:#ccc;
+}
+
+.box-container .box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background:#fff;
+    width: 90rem;
+    padding:10px;
+    margin:20px;
+    box-shadow: 0 3px 5px #3337;
+}
+
+.box-container .box .image-container{
+    text-align: center;
+    padding:10px 20px;
+}
+
+.box-container .box .image-container .big-image{
+    box-shadow: 0 3px 5px #3337;
+    border:5px solid #fff;
+    padding:20px 10px;
+    background: #eee;
+}
+
+.box-container .box .image-container .big-image img{
+    height:30rem;
+}
+
+.box-container .box .image-container .small-image{
+    padding:10px 0;
+}
+
+.box-container .box .image-container .small-image img{
+    box-shadow: 0 3px 5px #3337;
+    border:5px solid #fff;
+    padding:10px;
+    background: #eee;
+    margin:10px;
+    height: 8rem;
+    cursor: pointer;
+}
+
+.box-container .box .image-container .small-image img.active,
+.box-container .box .image-container .small-image img:hover{
+    background:#ccc;
+}
+
+.box-container .box .content{
+    padding:10px;
+}
+
+.box-container .box .content .title{
+    font-size: 30px;
+    color:#333;
+    padding: 10px 0;
+    text-transform: uppercase;
+}
+
+.box-container .box .content .price{
+    color:#333;
+    border-top: 2px solid #333;
+    border-bottom: 2px solid #333;
+    font-size: 30px;
+    padding: 5px;
+    display: inline-block;
+}
+
+.box-container .box .content p{
+    padding:10px 0;
+    font-size: 15px;
+    color:#666;
+}
+
+.box-container .box .content form .dropDown span{
+    font-size: 20px;
+    display: block;
+    color:#333;
+    padding:10px 0;
+}
+
+.box-container .box .content form .dropDown select{
+    height:30px;
+    font-size: 15px;
+    color:#666;
+}
+
+.box-container .box .content form .quantity{
+    padding:20px 0;
+}
+
+.box-container .box .content form .quantity span{
+    font-size: 20px;
+    color:#333;
+}
+
+.box-container .box .content form .quantity input{
+    height: 30px;
+    width: 60px;
+    text-align: center;
+    font-size: 20px;
+    color:#666;
+    margin:0 10px;
+}
+
+.box-container .box .content .btn{
+    height: 40px;
+    width: 18rem;
+    background:#333;
+    color:#fff;
+    margin-right: 10px;
+    border:none;
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.box-container .box .content .btn:hover{
+    background: #666;
+}
+
+.box-container .box .content .stock{
+    color:#666;
+    font-size: 20px;
+}
+
+.box-container .box .content .stock i{
+    color:green;
+}
+
+.box-container .box .content .share{
+    padding:20px 0;
+}
+
+.box-container .box .content .share a{
+    color:rgb(49, 49, 247);
+    padding:.8rem 20px;
+    margin:5px 0;
+    margin-right: 10px;
+    font-size: 25px;
+    display: inline-block;
+}
+
+.box-container .box .content .share a:hover{
+    color:#fff;
+    background:#666;
 }
 
 /* media queries  */
