--- a/css/style.css
+++ b/css/style.css
@@ -1282,7 +1282,7 @@ h2 {
 }
 
 /* Display Product */
-.box-container{
+.box_container{
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -1291,7 +1291,7 @@ h2 {
     background:#ccc;
 }
 
-.box-container .box{
+.box_container .box{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1302,27 +1302,27 @@ h2 {
     box-shadow: 0 3px 5px #3337;
 }
 
-.box-container .box .image-container{
+.box_container .box .image-container{
     text-align: center;
     padding:10px 20px;
 }
 
-.box-container .box .image-container .big-image{
+.box_container .box .image-container .big-image{
     box-shadow: 0 3px 5px #3337;
     border:5px solid #fff;
     padding:20px 10px;
     background: #eee;
 }
 
-.box-container .box .image-container .big-image img{
+.box_container .box .image-container .big-image img{
     height:30rem;
 }
 
-.box-container .box .image-container .small-image{
+.box_container .box .image-container .small-image{
     padding:10px 0;
 }
 
-.box-container .box .image-container .small-image img{
+.box_container .box .image-container .small-image img{
     box-shadow: 0 3px 5px #3337;
     border:5px solid #fff;
     padding:10px;
@@ -1332,23 +1332,23 @@ h2 {
     cursor: pointer;
 }
 
-.box-container .box .image-container .small-image img.active,
-.box-container .box .image-container .small-image img:hover{
+.box_container .box .image-container .small-image img.active,
+.box_container .box .image-container .small-image img:hover{
     background:#ccc;
 }
 
-.box-container .box .content{
+.box_container .box .content{
     padding:10px;
 }
 
-.box-container .box .content .title{
+.box_container .box .content .title{
     font-size: 30px;
     color:#333;
     padding: 10px 0;
     text-transform: uppercase;
 }
 
-.box-container .box .content .price{
+.box_container .box .content .price{
     color:#333;
     border-top: 2px solid #333;
     border-bottom: 2px solid #333;
@@ -1357,35 +1357,35 @@ h2 {
     display: inline-block;
 }
 
-.box-container .box .content p{
+.box_container .box .content p{
     padding:10px 0;
     font-size: 15px;
     color:#666;
 }
 
-.box-container .box .content form .dropDown span{
+.box_container .box .content form .dropDown span{
     font-size: 20px;
     display: block;
     color:#333;
     padding:10px 0;
 }
 
-.box-container .box .content form .dropDown select{
+.box_container .box .content form .dropDown select{
     height:30px;
     font-size: 15px;
     color:#666;
 }
 
-.box-container .box .content form .quantity{
+.box_container .box .content form .quantity{
     padding:20px 0;
 }
 
-.box-container .box .content form .quantity span{
+.box_container .box .content form .quantity span{
     font-size: 20px;
     color:#333;
 }
 
-.box-container .box .content form .quantity input{
+.box_container .box .content form .quantity input{
     height: 30px;
     width: 60px;
     text-align: center;
@@ -1394,7 +1394,7 @@ h2 {
     margin:0 10px;
 }
 
-.box-container .box .content .btn{
+.box_container .box .content .btn{
     height: 40px;
     width: 18rem;
     background:#333;
@@ -1405,24 +1405,24 @@ h2 {
     font-size: 17px;
 }
 
-.box-container .box .content .btn:hover{
+.box_container .box .content .btn:hover{
     background: #666;
 }
 
-.box-container .box .content .stock{
+.box_container .box .content .stock{
     color:#666;
     font-size: 20px;
 }
 
-.box-container .box .content .stock i{
+.box_container .box .content .stock i{
     color:green;
 }
 
-.box-container .box .content .share{
+.box_container .box .content .share{
     padding:20px 0;
 }
 
-.box-container .box .content .share a{
+.box_container .box .content .share a{
     color:rgb(49, 49, 247);
     padding:.8rem 20px;
     margin:5px 0;
@@ -1431,7 +1431,7 @@ h2 {
     display: inline-block;
 }
 
-.box-container .box .content .share a:hover{
+.box_container .box .content .share a:hover{
     color:#fff;
     background:#666;
 }
